Revert "Reapply "service offer and review""
This reverts commit 8bbc1a73642469afa0142cebc1dd4a3e184fe3f5.