@@ -2,9 +2,7 @@ package com.unicauca.smart_consumption.infrastructure.offer.dataproviders;
 
 import com.unicauca.smart_consumption.domain.offer.Offer;
 import com.unicauca.smart_consumption.domain.offer.ports.out.IOfferRepository;
-import com.unicauca.smart_consumption.domain.valueobject.Period;
 import com.unicauca.smart_consumption.infrastructure.pattern.mapper.OfferJPAMapper;
-import com.unicauca.smart_consumption.infrastructure.pattern.mapper.ProductJpaEntityMapper;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,7 +10,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
@@ -20,7 +17,6 @@ public class OfferRepositoryAdapter implements IOfferRepository {
 
     private final OfferJPARepository offerJPARepository;
     private final OfferJPAMapper offerJPAMapper;
-    private final ProductJpaEntityMapper productJpaEntityMapper;
 
     @Override
     public Offer createOffer(Offer offer) {
@@ -34,7 +30,7 @@ public class OfferRepositoryAdapter implements IOfferRepository {
                 .map(offerEntity -> {
                     Offer domainOffer = offerJPAMapper.toDomain(offerEntity);
                     domainOffer.update(offer.getDescription(), offer.getDiscountPercentage());
-                    domainOffer.setPeriod(offer.getPeriod());
+                    domainOffer.setValidityPeriod(offer.getValidityPeriod());
                     domainOffer.setStore(offer.getStore());
                     domainOffer.setProduct(offer.getProduct());
                     OfferJPAEntity updatedEntity = offerJPAMapper.toTarget(domainOffer);
@@ -56,36 +52,13 @@ public class OfferRepositoryAdapter implements IOfferRepository {
 
     @Override
     public Optional<Offer> findOfferById(String id) {
-        return offerJPARepository.findById(id).map(entity -> {
-            Offer offer = new Offer();
-            offer.setId(entity.getId());
-            offer.setDescription(entity.getDescription());
-            offer.setDiscountPercentage(entity.getDiscountPercentage());
-            offer.setDiscountedPrice(entity.getDiscountedPrice());
-            offer.setPeriod(new Period(entity.getPeriod().getStartDate()
-                    ,entity.getPeriod().getEndDate()));
-            offer.setProduct(productJpaEntityMapper.toDomain(entity.getProduct()));
-            //offer.setStore(storeJPAMapper.toDomain(entity.getStore()));
-            return offer;}
-        );
+        return offerJPARepository.findById(id).map(offerJPAMapper::toDomain);
     }
 
     @Override
     public List<Offer> findAllOffers() {
         return offerJPARepository.findAll().stream()
-                .map(entity -> {
-                    Offer offer = new Offer();
-                    offer.setId(entity.getId());
-                    offer.setDescription(entity.getDescription());
-                    offer.setDiscountPercentage(entity.getDiscountPercentage());
-                    offer.setDiscountedPrice(entity.getDiscountedPrice());
-                    offer.setPeriod(new Period(entity.getPeriod().getStartDate()
-                            ,entity.getPeriod().getEndDate()));
-                    offer.setProduct(productJpaEntityMapper.toDomain(entity.getProduct()));
-                    //offer.setStore(storeJPAMapper.toDomain(entity.getStore()));
-                    return offer;
-                })
-                .collect(Collectors.toList());
+                .map(offerJPAMapper::toDomain).toList();
     }
 
 }
